[tool.poetry]
name = "prototype-pro"
version = "0.1.0"
description = ""
authors = ["Artem <deusestmaleficus@gmail.com>"]
readme = "README.md"
packages = [{include = "prototype"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
